tests/baselines/reference/multipleExports.errors.txt
tests/cases/compiler/multipleExports.ts(10,13): error TS2484: Export declaration conflicts with exported declaration of 'x'


==== tests/cases/compiler/multipleExports.ts (1 errors) ====
    
    export module M {
        export var v = 0;
        export let x;
    }
    
    const x = 0;
    export module M {
        v;
        export {x};
                ~
!!! error TS2484: Export declaration conflicts with exported declaration of 'x'
    }
    